...
    <string name="label_name">Nome</string>
    <string name="label_email">Email</string>
    <string name="label_password">Senha</string>
    <string name="label_cpf">CPF</string>
    <string name="icon_text">Restaurante Universitário</string>
    <string name="forgot_password">Esqueceu sua senha?</string>
    <string name="login_button">Entrar</string>
    <string name="register_button">Registre-se</string>
    <string name="icon_description">Prato com garfo e faca</string>
    <!--/LOGIN -->

    <string name="error">Preencha todos os campos corretamente</string>

...
